Refactor whit SonarLint